--- a/mod_index.html
+++ b/mod_index.html
@@ -11,8 +11,8 @@ http://www.templatemo.com/tm-514-magazee
 -->
   <!-- load CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">    <!-- Google web font "Open Sans" -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
-  <link rel="stylesheet" href="css/templatemo-style.css">                                     <!-- Templatemo style -->
+  <link rel="stylesheet" href="./bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
+  <link rel="stylesheet" href="./templatemo-style.css">                                     <!-- Templatemo style -->
 
   <script>
     var renderPage = true;
