--- a/mod3.html
+++ b/mod3.html
@@ -11,8 +11,8 @@ http://www.templatemo.com/tm-514-magazee
 -->
   <!-- load CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">    <!-- Google web font "Open Sans" -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
-  <link rel="stylesheet" href="css/templatemo-style.css">                                     <!-- Templatemo style -->
+  <link rel="stylesheet" href="./bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
+  <link rel="stylesheet" href="./templatemo-style.css">                                     <!-- Templatemo style -->
 
   <script>
     var renderPage = true;
@@ -65,7 +65,7 @@ http://www.templatemo.com/tm-514-magazee
 <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
   <div class="tm-flex-center p-5 tm-bg-color-primary">
     <div class="tm-max-w-400 tm-flex-center tm-flex-col">
-      <img src="image-04.jpg" alt="Image" class="img-fluid">
+      <img src="./image-04.jpg" alt="Image" class="img-fluid">
       <p class="tm-text-color-white small tm-font-thin mb-0" style="color: white;"><br>Continuous effort — not strength or intelligence — is the key to unlocking our potential. </p> 
     </div>
   </div>
@@ -75,7 +75,7 @@ http://www.templatemo.com/tm-514-magazee
 <!-- 3rd Section -->
 <section class="row tm-section tm-mb-30">
   <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 text-center">
-    <img src="image-01.jpg" alt="Image" class="img-fluid">
+    <img src="./image-01.jpg" alt="Image" class="img-fluid">
   </div>
   <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
     <div class="tm-flex-center p-5">
@@ -102,7 +102,7 @@ http://www.templatemo.com/tm-514-magazee
  </div>
 </div>
 <div class="col-sm-30 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
- <img src="image-02.jpg" alt="" class="img-fluid" height="800px" width="300px">
+ <img src="./image-02.jpg" alt="" class="img-fluid" height="800px" width="300px">
 </div>
 </section>
 
@@ -122,7 +122,7 @@ http://www.templatemo.com/tm-514-magazee
 
 
 <!-- load JS -->
-<script src="js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
+<script src="./js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
 <script>
 
   /* DOM is ready
