--- a/signin.html
+++ b/signin.html
@@ -83,7 +83,7 @@
     <div class="panels-container">
         <div class="panel left-panel">
             <div class="content">
-                <img src="COS1.png" height="80px" width="200px">
+                <img src="./COS1.png" height="80px" width="200px">
                 <br><br>
                 <h3>New Here ?</h3>
                 <p>The capacity to learn is gift ,the ability to learn is a skill ,the willingness to learn is a choice !!!</p>
@@ -94,7 +94,7 @@
 
         <div class="panel right-panel">
             <div class="content">
-                <img src="COS1.png" height="80px" width="200px">
+                <img src="./COS1.png" height="80px" width="200px">
                 <br><br>
                 <h3>One of us ?</h3>
                 <p>"Learn continually - there's always "one more thing" to learn!"</p>
@@ -104,6 +104,6 @@
         </div>
     </div>
 </div>
-<script src="app.js"></script>
+<script src="./app.js"></script>
 </body>
 </html>
