--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
  
  <title>Chronicles Of Stack</title>
- <link rel="stylesheet" href="style3.css">
+ <link rel="stylesheet" href="./style3.css">
 </head>
 <body style="height: 100%;">
 <div class="page-wrapper">
@@ -46,7 +46,7 @@
          </div>
          <div class="container-fluid">
            <div class="landing_first_section_img">
-             <div class="img-set3"><img class="img-fluid" src="big1.png" alt=""></div>
+             <div class="img-set3"><img class="img-fluid" src="./big1.png" alt=""></div>
            </div>
          </div>
          <div class="img-wave1-set"></div>
@@ -98,25 +98,25 @@
    <div class="container container-modify">
      <div class="row">
        <div class="col-md-6">
-         <div class="img-effect"><a href="http://vue.pixelstrap.com/endless/dashboard/default" target="_blank"><img class="img-fluid creative-img" src="http://vue.pixelstrap.com/endless/landing/assets/images/landing/default-dashboard.png" alt="">
+         <div class="img-effect"><a href="#" target="_blank"><img class="img-fluid creative-img" src="./mod_1 image.png" alt="">
            <div class="cretive_img_content">
              <h4>Hackathon</h4>
            </div></a></div>
        </div>
        <div class="col-md-6">
-         <div class="img-effect"><a href="mod_index.html" target="_blank"><img class="img-fluid creative-img" src="mod_2.png" alt="">
+         <div class="img-effect"><a href="./mod_index.html" target="_blank"><img class="img-fluid creative-img" src="./mod_2.png" alt="">
            <div class="cretive_img_content">
              <h4>Academics</h4>
            </div></a></div>
        </div>
        <div class="col-md-6">
-         <div class="img-effect"><a href="mod3.html" target="_blank"><img class="img-fluid creative-img" src="mod_3 image.png" alt="">
+         <div class="img-effect"><a href="./mod3.html" target="_blank"><img class="img-fluid creative-img" src="./mod_3 image.png" alt="">
            <div class="cretive_img_content">
              <h4>College Events</h4>
            </div></a></div>
        </div>
        <div class="col-md-6">
-         <div class="img-effect"><a href="module4.html" target="_blank"><img class="img-fluid creative-img" src="study.png" alt="">
+         <div class="img-effect"><a href="./module4.html" target="_blank"><img class="img-fluid creative-img" src="./study.png" alt="">
            <div class="cretive_img_content">
              <h4>Self Study</h4>
            </div></a></div>
@@ -146,7 +146,7 @@
    <div class="bg_circle3"></div>
    <div class="container">
      <div class="landing-center ptb50">
-       <div class="title"><img class="img-fluid" src="COS1.png" alt="">
+       <div class="title"><img class="img-fluid" src="./COS1.png" alt="">
          <div class="footer-pattern-root">
            <div class="footer-line-pattern"></div>
          </div>
@@ -155,13 +155,13 @@
          <h1>The capacity to learn is gift ,the ability to learn is a skill ,
           the willingness to learn is a choice !!!</h1>
          <p>"Learn continually - there's always "one more thing" to learn!"</p><a class="btn mrl5 btn-md" 
-         target="_blank" href="signin.html">Check Now</a>
+         target="_blank" href="./signin.html">Check Now</a>
        </div>
      </div>
    </div>
  </section>
  <div class="tap-top" style="display: none;"><i class="fa fa-angle-double-up"></i></div>
 </div>
-<script src="app3.js"></script>
+<script src="./app3.js"></script>
 
 </body></html>
