--- a/mod_index.html
+++ b/mod_index.html
@@ -78,12 +78,12 @@ http://www.templatemo.com/tm-514-magazee
 <!-- Footer -->
 <div class="row">
   <div class="col-lg-12">
-    <p class="text-center small tm-copyright-text mb-0" style="color: black;"><b>Copyright &copy; <span class="tm-current-year">2022</span> Chronicles Of Stack | <a href="mailto:chronicalofstack@2020.com" style="color: white;">chroniclesofstack@2020.com</a></b></p>
+    <p class="text-center small tm-copyright-text mb-0" style="color: black;"><b>Copyright &copy; <span class="tm-current-year">2022</span> Chronicles Of Stack | <a href="mailto:chroniclesofstack@2020.com" style="color: white;">chroniclesofstack@2020.com</a></b></p>
   </div>
 </div>
 </div>
 <!-- load JS -->
-<script src="js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
+<script src="./js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
 <script>
 
   /* DOM is ready
