--- a/module4.html
+++ b/module4.html
@@ -83,7 +83,7 @@ http://www.templatemo.com/tm-514-magazee
 </div>
 </div>
 <!-- load JS -->
-<script src="js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
+<script src="./js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
 <script>
 
   /* DOM is ready
