--- a/module4.html
+++ b/module4.html
@@ -78,7 +78,7 @@ http://www.templatemo.com/tm-514-magazee
 <!-- Footer -->
 <div class="row">
   <div class="col-lg-12">
-    <p class="text-center small tm-copyright-text mb-0" style="color: black;"><b>Copyright &copy; <span class="tm-current-year">2022</span> Chronicals of stack | <a href="mailto:chronicalofstack@2020.com" style="color: white;">chroniclesofstack@2020.com</a></b></p>
+    <p class="text-center small tm-copyright-text mb-0" style="color: black;"><b>Copyright &copy; <span class="tm-current-year">2022</span> Chronicles of stack | <a href="mailto:chroniclesofstack@2020.com" style="color: white;">chroniclesofstack@2020.com</a></b></p>
   </div>
 </div>
 </div>
