--- a/mod_index.html
+++ b/mod_index.html
@@ -60,7 +60,7 @@ http://www.templatemo.com/tm-514-magazee
 <!-- 3rd Section -->
 <section class="row tm-section tm-mb-30">
   <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 text-center">
-    <img src="https://static.wikia.nocookie.net/class-t1t5/images/f/f1/19_Types_of_Students_in_an_Exam.jpg/revision/latest?cb=20211122055106"  alt="Image" class="img-fluid">
+    <img src="./exam.png"  alt="Image" class="img-fluid">
   </div>
   <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
     <div class="tm-flex-center p-5">
